--- a/members.html
+++ b/members.html
@@ -122,8 +122,8 @@
                    我们对星空充满了向往，对天文学的许多方向感兴趣。<br><br>
                    Most of us are students of <a href="http://www.h14z.cn/category/id1755144009448654642.htm">Zhejiang Province Hangzhou No.14 High School</a>.<br><br>
                    我们的成员主要来自<a href="http://www.h14z.cn/">浙江省杭州第十四中学</a>。<br><br>
-                   We will have a formal gathering at the beginning of each fall semester(always in September) to recruit new members. Of course, you can also apply to join us during the whole term.<br><br>
-                   我们将在每年9月开学时举行招新活动, 当然您也可以在学期中申请加入我们。<br><br>
+                   We will have a formal gathering at the beginning of each fall semester (always in September) to recruit new members. Of course, you can also apply to join us during the whole term.<br><br>
+                   我们将在每年9月开学时举行招新活动，当然您也可以在学期中申请加入我们。<br><br>
                    We welcome all students interested in astronomy to join us！<br><br>
                    我们欢迎所有对天文感兴趣的同学加入我们！<br><br>
                    Here is part of our members.<br><br>
@@ -132,7 +132,7 @@
             </div>
             <div class="col-lg-12 text-center">
                 <p><br></p>
-                <h4>Guidance Counselor 指导老师</h4>
+                <h4>Guidance Teacher 指导老师</h4>
             </div>
             <div class="col-lg-2 col-lg-offset-2">
                 <img class="img-responsive" src="https://h14ztws.github.io/pic/whb.jpg" alt="">
@@ -140,7 +140,7 @@
             <div class="col-lg-6">
                 <p>Haibin Wu 吴海斌<br></p>
                 <ul class="list-inline item-details">
-                    <li>The Outstanding Counselor Award of Zhejiang Province Astronomy Olympiad, 2019</li>
+                    <li>The Outstanding Guidance Teacher Award of Zhejiang Province Astronomy Olympiad, 2019</li>
                     <li>2019年，浙江省天文奥赛优秀指导教师奖</li>
                     <li>M.Sc. in Geography, <a href="http://www.fjnu.edu.cn/english/">Fujian Normal University</a>, 2017</li>
                     <li>2017年，<a href="http://www.fjnu.edu.cn/">福建师范大学</a>地理科学学院，理学硕士</li>
@@ -235,6 +235,11 @@
                     <li>The Third Prize of Zhejiang Province Astronomy Olympiad, 2019</li>
                     <li>2019年，浙江省天文奥赛高中组三等奖</li>
                 </ul>
+            </div>
+            <div class="col-lg-12 text-center">
+                <p><br></p>
+                <h4>Former Guidance Teacher 前任指导老师</h4>
+                <p>Shuangling Xu 许双玲<br></p>
             </div>
             <div class="col-lg-12 text-center">
                 <p><br></p>
