--- a/members.html
+++ b/members.html
@@ -169,7 +169,7 @@
                 <h4>Student Committee 理事会</h4>
             </div>
             <div class="col-lg-2 col-lg-offset-2">
-                <img class="img-responsive" src="https://h14ztws.github.io/pic/unknown.png" alt="">
+                <img class="img-responsive" src="https://h14ztws.github.io/pic/qry.jpg" alt="">
             </div>
             <div class="col-lg-6">
                 <p>Ruiyang Qiu 仇瑞扬<br></p>
@@ -180,7 +180,7 @@
             </div>
             <div class="col-lg-12"></div>
             <div class="col-lg-2 col-lg-offset-2">
-                <img class="img-responsive" src="https://h14ztws.github.io/pic/unknown.png" alt="">
+                <img class="img-responsive" src="https://h14ztws.github.io/pic/hzh.jpg" alt="">
             </div>
             <div class="col-lg-6">
                 <p>Zihan Hu 胡子涵<br></p>
