--- a/index.html
+++ b/index.html
@@ -293,8 +293,9 @@
                 <p>Related Unit 相关单位<br></p>
                 <p><font size="-1">
                     <a href="http://physics.zju.edu.cn/">Department of Physics, ZJU 浙江大学物理学系</a><br>
-                    <!--<a href="http://www.astro-zjut.com/">The Institute of Astrophysics, ZJUT 浙江工业大学天体物理研究所</a><br>-->
-                    <!--<a href="http://www.lxy.zjut.edu.cn/redir.php?catalog_id=895&object_id=74713">The Institute of Astrophysics, ZJUT 浙江工业大学天体物理研究所</a><br>-->
+                    <!--<a href="http://www.lxy.zjut.edu.cn/">School of Science, ZJUT 浙江工业大学理学院</a><br>-->
+                    <!--<a href="http://www.lxy.zjut.edu.cn/index.php/Synergy2">The Institute of Astrophysics, ZJUT 浙江工业大学天体物理研究中心</a><br>-->
+                    <!--<a href="http://www.lxy.zjut.edu.cn/index.php/Index/file_news_read?id=85&pid=7&mid=58">The Institute of Astrophysics, ZJUT 浙江工业大学天体物理研究所</a><br>-->
                     <a href="http://www.wsc.zjut.edu.cn/zjuteng/jsp/news.jsp?neId=3233">The Institute of Astrophysics, ZJUT 浙江工业大学天体物理研究所</a><br>
                     <a href="http://www.h14z.cn/">Hangzhou No.14 High School 浙江省杭州第十四中学</a><br>
                     <a href="https://h14ztws.github.io/hhaau.html">Hangzhou High-school Astronomical Association Union (HHAAU) 杭州高中天文社联合会</a><br>
@@ -329,7 +330,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        Copyright &copy; Hangzhou No.14 High School Astronomy Association 2020
+                        Copyright &copy; 2021 Hangzhou No.14 High School Astronomy Association
                     </div>
                 </div>
             </div>
