--- a/members.html
+++ b/members.html
@@ -328,7 +328,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        Copyright &copy; Hangzhou No.14 High School Astronomy Association 2020
+                        Copyright &copy; 2021 Hangzhou No.14 High School Astronomy Association
                     </div>
                 </div>
             </div>
