--- a/hhaau.html
+++ b/hhaau.html
@@ -246,81 +246,63 @@
                 <h4 style="color: #fff;">Committee 理事会</h4>
             </div>
             <div class="col-lg-6">
-                <p style="color: #fff;">Tangtangfang Fang 方唐唐方<br></p>
+                <p style="color: #fff;">Changwei Wu 吴昌蔚<br></p>
                 <ul class="list-inline item-details" style="color: #fff;">
                     <li>President</li>
                     <li>理事长</li>
-                    <li>Associate President, Astronomical Society of The High School Attached to Zhejiang University</li>
-                    <li>浙大附中明远天文社副社长</li>
-                </ul>
-            </div>
-            <div class="col-lg-12"></div>
-            <div class="col-lg-6">
-                <p style="color: #fff;">Yuming Cao 曹雨铭<br></p>
-                <ul class="list-inline item-details" style="color: #fff;">
-                    <li>Associate President</li>
-                    <li>副理事长</li>
                     <li>Associate President, <a href="https://h14ztws.github.io/">Hangzhou No.14 High School Astronomy Association</a></li>
                     <li><a href="https://h14ztws.github.io/">杭十四中天文社</a>副社长</li>
                 </ul>
             </div>
+            <div class="col-lg-12"></div>
             <div class="col-lg-6">
-                <p style="color: #fff;">Yuhao Zhu 朱昱浩<br></p>
+                <p style="color: #fff;">Xinyi Pan 潘昕怡<br></p>
                 <ul class="list-inline item-details" style="color: #fff;">
                     <li>Associate President</li>
                     <li>副理事长</li>
-                    <li>President, Hangzhou No.2 High School Astronomy Association</li>
-                    <li>杭二中时生天文社社长</li>
-                </ul>
-            </div>
-            <div class="col-lg-12"></div>
-            <div class="col-lg-4">
-                <p style="color: #fff;">Wenjing Bao 包文静<br></p>
-                <ul class="list-inline item-details" style="color: #fff;">
-                    <li>Director</li>
-                    <li>理事</li>
-                    <li>Associate President, Hangzhou Xuejun High School Astronomy Association</li>
-                    <li>学军中学天文社副社长</li>
-                </ul>
-            </div>
-            <div class="col-lg-4">
-                <p style="color: #fff;">Wentao Chen 陈文韬<br></p>
-                <ul class="list-inline item-details" style="color: #fff;">
-                    <li>Director</li>
-                    <li>理事</li>
-                    <li>Associate President, Astronomical Society of The High School Attached to Zhejiang University</li>
-                    <li>浙大附中明远天文社副社长</li>
-                </ul>
-            </div>
-            <div class="col-lg-4">
-                <p style="color: #fff;">Lezhi Wang 王乐之<br></p>
-                <ul class="list-inline item-details" style="color: #fff;">
-                    <li>Director</li>
-                    <li>理事</li>
-                    <li>Associate President, Hangzhou Xuejun High School Astronomy Association</li>
-                    <li>学军中学天文社副社长</li>
-                </ul>
-            </div>
-            <div class="col-lg-4">
-                <p style="color: #fff;">Benteng Xu 徐奔腾<br></p>
-                <ul class="list-inline item-details" style="color: #fff;">
-                    <li>Director</li>
-                    <li>理事</li>
-                    <li>Associate President, Hangzhou High School Observatory</li>
-                    <li>杭高天文社副社长</li>
-                </ul>
-            </div>
-            <div class="col-lg-4">
-                <p style="color: #fff;">Chen Yang 杨晨<br></p>
-                <ul class="list-inline item-details" style="color: #fff;">
-                    <li>Director</li>
-                    <li>理事</li>
                     <li>Associate President, Hangzhou No.2 High School Astronomy Association</li>
                     <li>杭二中时生天文社副社长</li>
                 </ul>
             </div>
+            <div class="col-lg-6">
+                <p style="color: #fff;">Haotian Yang 杨昊天<br></p>
+                <ul class="list-inline item-details" style="color: #fff;">
+                    <li>Associate President</li>
+                    <li>副理事长</li>
+                    <li>Associate President, Astronomical Society of The High School Attached to Zhejiang University</li>
+                    <li>浙大附中明远天文社副社长</li>
+                </ul>
+            </div>
+            <div class="col-lg-12"></div>
             <div class="col-lg-4">
-                <p style="color: #fff;">Yixuan Zhang 张一玄<br></p>
+                <p style="color: #fff;">Yiheng Fang 方以衡<br></p>
+                <ul class="list-inline item-details" style="color: #fff;">
+                    <li>Director</li>
+                    <li>理事</li>
+                    <li>Associate President, Hangzhou Xuejun High School Astronomy Association</li>
+                    <li>学军中学天文社副社长</li>
+                </ul>
+            </div>
+            <div class="col-lg-4">
+                <p style="color: #fff;">Sui Huang 黄遂<br></p>
+                <ul class="list-inline item-details" style="color: #fff;">
+                    <li>Director</li>
+                    <li>理事</li>
+                    <li>Associate President, Hangzhou Xuejun High School Astronomy Association</li>
+                    <li>学军中学天文社副社长</li>
+                </ul>
+            </div>
+            <div class="col-lg-4">
+                <p style="color: #fff;">Xuanwei Liang 梁轩玮<br></p>
+                <ul class="list-inline item-details" style="color: #fff;">
+                    <li>Director</li>
+                    <li>理事</li>
+                    <li>Associate President, Hangzhou Xuejun High School Astronomy Association</li>
+                    <li>学军中学天文社副社长</li>
+                </ul>
+            </div>
+            <div class="col-lg-4">
+                <p style="color: #fff;">Zhenwei Liu 刘镇玮<br></p>
                 <ul class="list-inline item-details" style="color: #fff;">
                     <li>Director</li>
                     <li>理事</li>
@@ -329,12 +311,12 @@
                 </ul>
             </div>
             <div class="col-lg-4">
-                <p style="color: #fff;">Gengnan Zhang 章庚楠<br></p>
+                <p style="color: #fff;">Yuhao Sun 孙瑜浩<br></p>
                 <ul class="list-inline item-details" style="color: #fff;">
                     <li>Director</li>
                     <li>理事</li>
-                    <li>President, Xiaoshan High School Astronomy Association</li>
-                    <li>萧中天文社社长</li>
+                    <li>Associate President, <a href="https://h14ztws.github.io/">Hangzhou No.14 High School Astronomy Association</a></li>
+                    <li><a href="https://h14ztws.github.io/">杭十四中天文社</a>副社长</li>
                 </ul>
             </div>
             <div class="col-lg-12">
@@ -370,7 +352,7 @@
                         Email: <a href="mailto:3291088932@qq.com">3291088932@qq.com</a><br>
                         Wechat: 杭中天联天文势力<br>
                         QQ: 3291088932<br>
-                        Qzone: <a href="https://3291088932.qzone.qq.com">https://3291088932.qzone.qq.com</a><br>
+                        Qzone: <a href="https://3291088932.qzone.qq.com/">杭州高中天文社联合会的空间</a><br>
                     </p>
                 </div>
             </div>
@@ -400,7 +382,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        Copyright &copy; Hangzhou High-school Astronomical Association Union 2020
+                        Copyright &copy; 2021 Hangzhou High-school Astronomical Association Union
                     </div>
                 </div>
             </div>
