--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <title>
-    Hangzhou No.14 High School Astronomy Association 杭十四中天文社
+    杭十四中天文社 Hangzhou No.14 High School Astronomy Association
   </title>
   <meta name="viewport" content="width=device-width" />
   <link href="https://h14ztws.github.io/favicon.ico" rel="icon" type="image/x-icon">
@@ -228,8 +228,8 @@
                         如果您有任何想法和问题，或者想了解更多关于我们的信息，欢迎与我们联系。<br><br>
                         Email: <a href="mailto:h14ztws@126.com">h14ztws@126.com</a><br>
                         QQ: 1873144146<br>
-                        Qzone: <a href="https://1873144146.qzone.qq.com">https://1873144146.qzone.qq.com</a><br>
-                        Bilibili: <a href="https://space.bilibili.com/317033762">https://space.bilibili.com/317033762</a><br><br>
+                        Qzone: <a href="https://1873144146.qzone.qq.com">杭十四中天文社的空间</a><br>
+                        Bilibili: <a href="https://space.bilibili.com/317033762">杭十四中天文社</a><br><br>
                     </p>
                 </div>
             </div>
@@ -294,9 +294,8 @@
                 <p><font size="-1">
                     <a href="http://physics.zju.edu.cn/">Department of Physics, ZJU 浙江大学物理学系</a><br>
                     <!--<a href="http://www.lxy.zjut.edu.cn/">School of Science, ZJUT 浙江工业大学理学院</a><br>-->
-                    <!--<a href="http://www.lxy.zjut.edu.cn/index.php/Synergy2">The Institute of Astrophysics, ZJUT 浙江工业大学天体物理研究中心</a><br>-->
-                    <!--<a href="http://www.lxy.zjut.edu.cn/index.php/Index/file_news_read?id=85&pid=7&mid=58">The Institute of Astrophysics, ZJUT 浙江工业大学天体物理研究所</a><br>-->
-                    <a href="http://www.wsc.zjut.edu.cn/zjuteng/jsp/news.jsp?neId=3233">The Institute of Astrophysics, ZJUT 浙江工业大学天体物理研究所</a><br>
+                    <!--<a href="http://www.wsc.zjut.edu.cn/zjuteng/jsp/news.jsp?neId=3233">The Institute of Astrophysics, ZJUT 浙江工业大学天体物理研究所</a><br>-->
+                    <a href="http://www.lxy.zjut.edu.cn/index.php/Synergy2">Institute for Theoretical Physics and Cosmology, ZJUT 浙江工业大学理论物理与宇宙学研究所</a><br>
                     <a href="http://www.h14z.cn/">Hangzhou No.14 High School 浙江省杭州第十四中学</a><br>
                     <a href="https://h14ztws.github.io/hhaau.html">Hangzhou High-school Astronomical Association Union (HHAAU) 杭州高中天文社联合会</a><br>
                 </p>
