--- a/members.html
+++ b/members.html
@@ -239,7 +239,7 @@
             <div class="col-lg-12 text-center">
                 <p><br></p>
                 <h4>Former Guidance Teacher 前任指导老师</h4>
-                <p>Shuangling Xu 许双玲<br></p>
+                <p title="M.Sc. in Geography, Northeast Normal University, 2013">Shuangling Xu 许双玲<br></p>
             </div>
             <div class="col-lg-12 text-center">
                 <p><br></p>
@@ -258,7 +258,6 @@
                     <li>Yuzhe Jin 金禹哲</li>
                     <li>Ruoming Zhang 章若茗</li>
                     <li>Hao Zeng 曾浩</li>
-                    <li></li>
                 </ul>
             </div>
             <div class="col-lg-4">
@@ -274,7 +273,6 @@
                     <li>Haonan Kong 孔皓楠</li>
                     <li>Kaiwen Fang 方凯文</li>
                     <li>Zixian Yang 杨子纤</li>
-                    <li></li>
                 </ul>
             </div>
             <div class="col-lg-4">
@@ -284,7 +282,6 @@
                     <li>Alexandra Dong 董垚</li>
                     <li>Yiceng Cheng 程忆曾</li>
                     <li>Haoyang Shao 邵昊洋</li>
-                    <li></li>
                 </ul>
             </div>
         </div>
